# Neuronize

./: .Neuronize.deploy-extra  .Neuronize.desktop  .dlls  .gitexternals  .gitignore  .gitlab-ci.yml  .gitmodules  .gitsubprojects  CMakeLists.txt  README.md
CMake/: CPackConfig.cmake  FindEigen3.cmake  FindOpenMesh.cmake  FindQGLViewer.cmake  FindSOIL.cmake  FindSQLite3.cmake  FindVCG.cmake
Content/: .qglviewer.xml
Content/Content/Definitions/: ExampleNeuron_medium.swc  ExampleNeuron_small.swc
Content/Content/Meshes/: IcoSphera4Subdiv1Radio.off  IcoSphera5Subdiv1Radio.off
Content/Content/Spines/Low/: E10L.mtl  E11L.mtl  E12L.mtl  E13L.mtl  E14L.mtl  E15L.mtl  E1L.mtl  E1L.obj.mtl  E3L.mtl  E4L.mtl  E5L.mtl  E6L.mtl  E7L.mtl  E8L.mtl  E9L.mtl
Content/tmp/SomaGenerated/: SomaDeformed.obj.cfg
Neuronize/: .qglviewer.xml  .qglviewer1.xml  BBDD.cpp  BBDD.h  CMakeLists.txt  CMakeSetup.rc  CompareMeshWidgetViewer.cpp  CompareMeshWidgetViewer.h  CompareMeshesWidget.cpp  CompareMeshesWidget.h  ExportDialog.cpp  ExportDialog.h  FrameConstrictor.cpp  FrameConstrictor.h  LoadFileDialog.cpp  LoadFileDialog.h  MeshVCG.cpp  MeshVCG.h  NeuroGeneratorWidget.cpp  NeuroGeneratorWidget.h  NeuroGeneratorWidget.ui  NeuroGeneratorWidgetViewer.cpp  NeuroGeneratorWidgetViewer.h  NeuronSetDialog.cpp  NeuronSetDialog.h  RepairDialog.cpp  RepairDialog.h  RepairWidget.cpp  RepairWidget.h  SelectSpinesDialog.cpp  SelectSpinesDialog.h  SomaCreatorWidget.cpp  SomaCreatorWidget.h  SomaCreatorWidget.ui  SomaDeformerWidget.cpp  SomaDeformerWidget.h  SomaDeformerWidget.ui  SomaDeformerWidgetViewer.cpp  SomaDeformerWidgetViewer.h  WizzardInputOne.cpp  (+16 more)
libs/libGLNeuroUtils/: CMakeLists.txt  GLHelper.hpp  LightManager.cpp  LightManager.h  MeshRenderer.cpp  MeshRenderer.h  NeuroGraphRenderer.cpp  NeuroGraphRenderer.h  OldLODController.cpp  OldLODController.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  VBOMeshRenderer.cpp  VBOMeshRenderer.h  config.h  skybox.cpp  skybox.h
libs/libNeuroUtils/: AABB.cpp  AABB.h  AS2SWCV2.cpp  AS2SWCV2.h  ASC2SWC.cpp  ASC2SWC.h  ASC2SWCV2.cpp  ASC2SWCV2.h  BBDD.cpp  BBDD.h  BSphere.cpp  BSphere.h  BaseMesh.cpp  BaseMesh.h  BaseMeshContainer.cpp  BaseMeshContainer.h  CMakeLists.txt  CriterionsEvaluators.hpp  DeformableObject.cpp  DeformableObject.h  LecturaFichero.cpp  LecturaFichero.h  MSNode.cpp  MSNode.h  MSObject.cpp  MSObject.h  MSSpring.cpp  MSSpring.h  MSSpringConstraint.cpp  MSSpringConstraint.h  MeshDef.hpp  MeshVCG.cpp  MeshVCG.h  NeuroLevelVizNode.cpp  NeuroLevelVizNode.h  NeuroLevelVizTable.cpp  NeuroLevelVizTable.h  NeuroSWC.cpp  NeuroSWC.h  NeuronGraph.cpp  (+16 more)
libs/libQtNeuroUtils/: CMakeLists.txt  CriterionTypes.cpp  CriterionTypes.h  NeuroDistGenerator.cpp  NeuroDistGenerator.h  QtIndexedPalette.cpp  QtIndexedPalette.h  QtThreadsManager.hpp  StateControlTypes.cpp  StateControlTypes.h  XMLProgressiveNeuroViz.cpp  XMLProgressiveNeuroViz.h  XMLProgressiveNeuroVizCriterion.cpp  XMLProgressiveNeuroVizCriterion.h  XMLProgressiveNeuroVizManager.cpp  XMLProgressiveNeuroVizManager.h  XMLSomaDef.cpp  XMLSomaDef.h  XMLSomaDefDendriticModif.cpp  XMLSomaDefDendriticModif.h  XMLSomaDefManager.cpp  XMLSomaDefManager.h  libqtneuroutils.cpp  libqtneuroutils.h
libs/libSysNeuroUtils/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  SystemUtils.cpp  SystemUtils.h  Timer.cpp  Timer.h  defs.cpp  defs.h  randomUtils.cpp  randomUtils.h
